tests/machine/x/java/list_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramslist_assign2542509413/001/Main.java:3: error: incompatible types: no instance(s) of type variable(s) T exist so that List<T> conforms to int
	static int nums = java.util.Arrays.asList(1, 2);
	                                         ^
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
/tmp/TestCompileValidProgramslist_assign2542509413/001/Main.java:6: error: int cannot be dereferenced
	System.out.println(nums.get(1));
	                       ^
2 errors


  1| var nums = [1, 2]
  2| nums[1] = 3
